# sgd

./: README.md  changelog  package.yaml  sgd.cabal  sgd.cabal.backup  stack.yaml  test.hs
Numeric/: SGD.hs
Numeric/SGD/: Dataset.hs  Grad.hs  LogSigned.hs
Numeric/SGD/Grad/: Map.hs  Vector.hs
examples/: example1.hs
src/Numeric/: SGD.hs
src/Numeric/SGD/: AdaDelta.hs  Adam.hs  Args.hs  DataSet.hs  Dataset.hs  Grad.hs  LogSigned.hs  Momentum.hs  ParamSet.hs  Pipe.hs  Sparse.hs  Type.hs
src/Numeric/SGD/Sparse/: Dataset.hs  Grad.hs  LogSigned.hs  Momentum.hs
test/: Spec.hs
