name:               sgd
version:            0.0.1
synopsis:           Stochastic gradient descent
description:
    Implementation of the Stochastic Gradient Descent optimization method.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2012 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Math, Algorithms
homepage:           https://github.com/kawu/sgd
build-type:         Simple

library
    build-depends:
        base
      , containers
      , vector
      , random
      , primitive
      , logfloat
      , monad-par

    exposed-modules:
        Numeric.SGD
      , Numeric.SGD.Grad

    ghc-options: -Wall -O2

source-repository head
    type: git
    location: git://github.com/kawu/sgd.git
