name:               sgd
version:            0.3.0
synopsis:           Stochastic gradient descent
description:
    Implementation of a Stochastic Gradient Descent optimization method.
    See examples directory in the source package for examples of usage.
    .
    It is a preliminary implementation of the SGD method and API may change
    in future versions.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2012 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Math, Algorithms
homepage:           https://github.com/kawu/sgd
build-type:         Simple

extra-source-files: examples/example1.hs

library
    build-depends:
        base >= 4 && < 5
      , containers >= 0.4.2 && < 0.6
      , vector
      , random
      , logfloat
      , monad-par
      , deepseq
      , mtl
      , async

    exposed-modules:
        Numeric.SGD
      , Numeric.SGD.LogSigned
      , Numeric.SGD.Grad
      , Numeric.SGD.Grad.Map
      , Numeric.SGD.Grad.Vector

    ghc-options: -Wall -O2

source-repository head
    type: git
    location: git://github.com/kawu/sgd.git
