name:               sgd
version:            0.5.0.0
synopsis:           Stochastic gradient descent
description:
    Stochastic gradient descent library.
    .
    This is a preliminary version, API may change in future versions.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2019 Jakub Waszczuk
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Math
homepage:           https://github.com/kawu/sgd
build-type:         Simple

extra-source-files: examples/example1.hs

library
    hs-source-dirs: src

    build-depends:
        base            >= 4        && < 5
      , containers      >= 0.4      && < 0.7
      , pipes           >= 4.3      && < 4.4
      , vector          >= 0.10     && < 0.13
      , random          >= 1.0      && < 1.2
      , primitive       >= 0.5      && < 0.7
      , logfloat        >= 0.12     && < 0.14
      , monad-par       >= 0.3.4    && < 0.4
      , deepseq         >= 1.3      && < 1.5
      , binary          >= 0.5      && < 0.9
      , bytestring      >= 0.9      && < 0.11
      , mtl             >= 2.0      && < 2.3
      , filepath        >= 1.3      && < 1.5
      , temporary       >= 1.1      && < 1.4
      , hmatrix         >= 0.19     && < 0.20

    exposed-modules:
        Numeric.SGD
      , Numeric.SGD.Pipe
      , Numeric.SGD.AdaDelta
      , Numeric.SGD.Momentum
      , Numeric.SGD.DataSet
      , Numeric.SGD.ParamSet
      , Numeric.SGD.Args
      , Numeric.SGD.Sparse
      , Numeric.SGD.Sparse.Momentum
      , Numeric.SGD.Sparse.LogSigned
      , Numeric.SGD.Sparse.Grad

    ghc-options: -Wall -O2

source-repository head
    type: git
    location: git://github.com/kawu/sgd.git
